--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "bootstrap": ">=4.1.2",
     "connected-react-router": "^4.5.0",
     "cross-fetch": "^2.2.2",
+    "d3-axis": "^1.0.12",
+    "d3-scale": "^2.1.2",
+    "d3-scale-chromatic": "^1.3.3",
+    "d3-selection": "^1.3.2",
     "history": "^4.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
