--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "connected-react-router": "^4.5.0",
     "cross-fetch": "^2.2.2",
     "d3-axis": "^1.0.12",
+    "d3-brush": "^1.0.6",
     "d3-scale": "^2.1.2",
     "d3-scale-chromatic": "^1.3.3",
     "d3-selection": "^1.3.2",
