--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "cross-fetch": "^2.2.2",
     "d3-axis": "^1.0.12",
     "d3-brush": "^1.0.6",
+    "d3-color": "^1.4.0",
+    "d3-interpolate": "^1.3.2",
     "d3-scale": "^2.1.2",
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.3.2",
