--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "d3-scale": "^2.1.2",
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.3.2",
+    "eslint": "^4.18.2",
     "history": "^4.7.2",
+    "js-yaml": "^3.13.1",
+    "mem": "^4.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
