add lanes contrast slider

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "history": "^4.7.2",
     "js-yaml": "^3.13.1",
     "mem": "^4.0.0",
+    "rc-slider": "^8.7.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
