--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-selection": "^1.3.2",
     "dot-prop": "^5.1.1",
     "eslint": "^4.18.2",
+    "file-saver": "^2.0.2",
     "history": "^4.7.2",
     "js-yaml": "^3.13.1",
     "mem": "^4.0.0",
@@ -29,7 +30,8 @@
     "react-scripts": "1.1.5",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "save-svg-as-png": "^1.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
