--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rc-slider": "^8.7.1",
     "react": "^16.5.2",
     "react-autosuggest": "^10.1.0",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
     "react-redux": "^5.0.7",
